--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+
+= form_tag movies_path, :method => :get, :id => 'ratings_form' do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", 1, @my_ratings.include?(rating), :id => "ratings_#{rating}"
+  = submit_tag 'Refresh', :id => 'ratings_submit'
+
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => @title_header}= link_to "Movie Title", movies_path(:sort =>'title', :ratings => @my_ratings), :id => "title_header"
       %th Rating
-      %th Release Date
+      %th{:class => @date_header}= link_to "Release Date", movies_path(:sort => 'release_date', :ratings => @my_ratings), :id => "release_date"
       %th More Info
   %tbody
     - @movies.each do |movie|
